@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0

title [Behavioral] Strategy Pattern

together {
class Client
class Context {
    - _state : State*
    --
    + Context()
    + Context(State*)
    + ~Context()
    ..
    + setState(State*)
    + request1()
    + request2()
}
}
Client --> Context

together {
abstract State {
   # _context : Context*
   --
   + {abstract} ~State()
   ..
   + setContext(Context*)
   + {abstract} getName()
   + {abstract} handle1()
   + {abstract} handle2()
}
class StateA {
   + getName()
   + handle1()
   + handle2()
}
class StateB {
   + getName()
   + handle1()
   + handle2()
}
}
State <|.. StateA
State <|.. StateB

Context o-r- State

hide empty members

@enduml